# bestekar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: package.yml  uvx.yml
docs/: app.js  index.html  style.css
rvc/: README.md
rvc/indices/: turkish_default.index
rvc/models/: turkish_default.pth
src/bestekar/: __init__.py
src/besteml/: __init__.py
src/bestewk/: __init__.py
